Fix small layout issues on mobile
- Disable pull to refresh on Android app

--- a/src/app/pages/dashboard-pages/dashboard-page/dashboard-page.component.scss
+++ b/src/app/pages/dashboard-pages/dashboard-page/dashboard-page.component.scss
@@ -2,7 +2,7 @@
 	position: fixed;
 	display: grid;
 	grid-template-rows: auto 1fr;
-	height: 100vh;
+	height: 100%;
 	width: 100%;
 	background-color: var(--dav-color-surface);
 	padding: 0;
